--- a/ui/html/setting/smtp-setting.html
+++ b/ui/html/setting/smtp-setting.html
@@ -25,23 +25,11 @@
     <div class="sidebar-wrapper">
         <ul class="list-menu">
             <li class="header">Total Info</li>
-            <li class="has-children"><a href="javascript:;"><i
-                    class="la la-dashboard"></i><span>대시보드</span>
-                <div class="right-container"><i class="la la-chevron-down tree-icon"></i></div>
+            <li class="tree-item"><a href="/dashboard/total"><i class="la la-group"></i><span>대시보드</span>
+                <div class="right-container"></div>
             </a>
-                <ul class="tree">
-                    <!--   전체적인 진황 현황 등 그래프와 진행 상태 표현             -->
-                    <li class="tree-item"><a href="/dashboard/total"><i
-                            class="la la-circle"></i><span style="font-size:0.8em;">전체진행현황</span></a></li>
-                    <!--   프로젝트 별 진행 상태 및 설정 현황 표현             -->
-                    <li class="tree-item"><a href="/dashboard/detail"><i
-                            class="la la-circle"></i><span
-                            style="font-size:0.8em;">프로젝트상세</span></a>
-                    </li>
-                </ul>
-            </li>
             <li class="header">Project Info</li>
-            <li class="tree-item"><a href="/project/progress"><i class="la la-group"></i><span>프로젝트 진행 현황</span>
+            <li class="tree-item"><a href="/project/progress"><i class="la la-group"></i><span>프로젝트 관리</span>
                 <div class="right-container"></div>
             </a>
             <li class="tree-item"><a href="/manager/target"><i class="la la-group"></i><span>대상관리</span>
@@ -77,15 +65,15 @@
 <div class="main-content">
     <div class="header">
         <div class="left">
-            <p>SMTP 설정</p>
+            <p></p>
             <div class="breadcrumb"><span>설정</span><span>SMTP 설정</span></div>
         </div>
         <ul class="right">
             <li class="header-user dropdown ml-4 mr-3"><a class="user-photo trigger-dropdown"><img class="user-img"
-                                                                                                   src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/101e1fb9-0b2e-4f2d-acfb-a777dc48f629/d4sn4w7-2a5d1fdf-2af2-408a-9300-08f28cd12951.png"/></a>
+                                                                                                   src="/image/user.png"/></a>
                 <div class="dropdown-box with-header">
                     <div class="dropdown-header"><img class="user-img user-img--lg"
-                                                      src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/101e1fb9-0b2e-4f2d-acfb-a777dc48f629/d4sn4w7-2a5d1fdf-2af2-408a-9300-08f28cd12951.png"/>
+                                                      src="/image/user.png"/>
                         <div class="user-info">
                             <h3 id="dropdown_name">name</h3><span class="helper-text" id="dropdown_id">email</span>
                         </div>
