--- a/ui/html/project/project.html
+++ b/ui/html/project/project.html
@@ -76,30 +76,10 @@
       <p></p>
       <div class="breadcrumb"><span>프로젝트 관리</span></div>
     </div>
-    <ul class="right">
-      <li class="header-user dropdown ml-4 mr-3"><a class="user-photo trigger-dropdown"><img class="user-img"
-                                                                                             src="/image/user.png"/></a>
-        <div class="dropdown-box with-header">
-          <div class="dropdown-header"><img class="user-img user-img--lg"
-                                            src="/image/user.png"/>
-            <div class="user-info">
-              <h3 id="dropdown_name">name</h3><span class="helper-text" id="dropdown_id">email</span>
-            </div>
-          </div>
-          <ul class="dropdown-body">
-            <li><a href="/setting/user" target="_blank"><i
-                    class="la la-user"></i><span>사용자 정보</span></a></li>
-            <li><a href="/setting/smtp"><i class="la la-cogs"></i><span>SMTP 설정</span></a></li>
-            <li><a href="javascript:Logout();"><i class="la la-power-off"></i><span>로그아웃</span></a></li>
-          </ul>
-        </div>
-      </li>
-    </ul>
     <div class="right--mobile"><a class="header-item--mobile sidebar-control"><i class="la la-navicon"></i></a><a
             class="header-item--mobile"><i class="la la-comments"></i></a><a class="header-item--mobile"><i
             class="la la-ellipsis-v"></i></a></div>
   </div>
-
   <div class="content-wrapper">
     <div class="row">
       <div class="col-12">
@@ -110,130 +90,49 @@
               <button class="btn btn-primary active" id="del_project"><span>프로젝트 삭제</span></button>
             </div>
           </div>
-
-          <div class="pgn-modal" id="my_modal">
-            <div class="pgn-modal-wrapper ">
-              <div class="modal__header">
-                <h5>템플릿 수정</h5>
-                <div class="toolbox">
-                  <button class="btn-modal-close modal-dismiss" onclick="closeModal()"><i
-                          class="la la-times"></i></button>
-                </div>
-              </div>
-              <div class="modal__body">
-                <div class="form-group w-50">
-                  <label for="tmp_division">구분</label><select id="tmp_division">
-                  <option value="1" selected>기본</option>
-                  <option value="2">사용자</option>
-                </select>
-                </div>
-
-                <div class="form-group w-50">
-                  <label for="tmp_kind">훈련유형</label><select id="tmp_kind">
-                  <option value="1" selected>경고 안내</option>
-                  <option value="2">피싱 유도</option>
-                  <option value="3">실태 조사</option>
-                </select>
-                </div>
-
-                <div class="form-group w-50">
-                  <label for="file_info">첨부파일 정보</label><select id="file_info">
-                  <option selected value="">첨부파일 없음</option>
-                  <option value="1">EXE</option>
-                  <option value="2">HTML</option>
-                  <option value="3">Excel</option>
-                </select>
-                </div>
-
-                <div class="form-group">
-                  <label for="tmp_name">템플릿명</label>
-                  <input type="text"
-                         id="tmp_name"
-                         maxlength="30">
-                  <input type="hidden" id="tmp_no">
-                </div>
-
-                <div class="form-group">
-                  <label for="sender_name">발송자명</label>
-                  <input type="text"
-                         id="sender_name"
-                         maxlength="30">
-                </div>
-                <!-- <label>발송자</label> -->
-
-                <div class="form-group">
-                  <label for="title">메일 제목</label>
-                  <input type="text"
-                         id="title" maxlength="60"></div>
-                <!-- <label>메일 제목(최대 30자)</label> -->
-
-
-                <textarea name="content" id="content"></textarea>
-                <script>
-                  CKEDITOR.replace('content');
-                </script>
-                <div class="form-group">
-                  <div style="color: red;font-weight: bold; font-size: small">
-                    {{target_name}} : 훈련 대상자의 이름, {{count_ip}} : 악성메일 훈련 솔루션 IP, {{target_position}}
-                    : 직급, {{target_orgarnize}} : 조직, {{target_phone}} : 훈련 대상자의 전화번호
-                  </div>
-                </div>
-                <div class="form-group w-50">
-                  <label for="download_type">다운로드 방식</label><select id="download_type">
-                  <option selected value="1">첨부파일 없음</option>
-                  <option value="2">링크 첨부</option>
-                  <option value="3">파일 첨부</option>
-                </select>
-                </div>
-
-              </div>
-              <div class="modal__footer">
-                <button class="btn btn-ghost modal-dismiss" onclick="closeModal()">취소</button>
-                <button class="btn btn-primary modal-dismiss" id="del" disabled="" onclick="delTml()">삭제</button>
-                <button class="btn btn-primary pull-right" id="tag_reg" onclick="editTml()"><span></span>
-                </button>
-              </div>
-            </div>
-          </div>
-
-          <div class="toolbox">
-            <div class="box-body pt-0 px-0 responsive">
-              <table id="project_list">
-                <thead>
-                <tr>
-                  <th style="visibility:hidden;position:absolute;"></th>
-                  <th>
-                    <div class="pgn-checkbox"><input type="checkbox" id="all_select"><span></span>
-                    </div>
-                  </th>
-                  <th>No</th>
-                  <th>프로젝트명</th>
-                  <th>대상 태그</th>
-                  <th>진행상태</th>
-                  <th>템플릿명</th>
-                  <th>대상자 수</th>
-                  <th>감염 현황(%)</th>
-                  <th>전송 현황(%)</th>
-                  <th>시작일</th>
-                  <th>종료일</th>
-                </tr>
-                </thead>
-                <tbody>
-                </tbody>
-              </table>
-            </div>
-          </div>
-
-
-          <div class="pagination-wrapper clearfix" id="under">
-            <ul class="pagination float--right" id="pages">
-            </ul>
-          </div>
-
         </div>
       </div>
     </div>
+
+    <div class="toolbox">
+      <div class="box-body pt-0 px-0 responsive">
+        <table id="project_list">
+          <thead>
+          <tr>
+            <th style="visibility:hidden;position:absolute;"></th>
+            <th>
+              <div class="pgn-checkbox"><input type="checkbox" id="all_select"><span></span>
+              </div>
+            </th>
+            <th>No</th>
+            <th>프로젝트명</th>
+            <th>대상 태그</th>
+            <th>진행상태</th>
+            <th>템플릿명</th>
+            <th>대상자 수</th>
+            <th>열람 현황(%)</th>
+            <th>감염 현황(%)</th>
+            <th>전송 현황(%)</th>
+            <th>시작일</th>
+            <th>종료일</th>
+          </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+
+    <div class="pagination-wrapper clearfix" id="under">
+      <ul class="pagination float--right" id="pages">
+      </ul>
+    </div>
+
   </div>
+</div>
+</div>
+</div>
 </div>
 <script src="/js/lib/Sortable.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
@@ -242,40 +141,6 @@
 <script src="/js/demo.js"></script>
 <script src="/js/script.js"></script>
 <script>
-  // function getTag() {
-  //   console.log('getTagForTargetInfo')
-  //   const r = new XMLHttpRequest();
-  //   r.open('GET', 'http://localhost:5000/setting/getTag', true);
-  //   r.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
-  //   r.withCredentials = true;
-  //   r.onreadystatechange = function () {
-  //     //let rObj;
-  //     if (r.readyState === 4) {
-  //       if (r.status === 200) {
-  //         rObj = JSON.parse(r.responseText);
-  //         if (rObj.tags.length > 0) {
-  //           $('#tag_menage > tbody').empty();
-  //           for (let j = 0; j < rObj.tags.length; j++) {
-  //             $('#tag_menage >tbody:last').append("<tr id='tag_" + rObj.tags[j].tag_no + "'>" +
-  //                     "                        <td>" + rObj.tags[j].tag_name + "</td>\n" +
-  //                     "                        <td>" + rObj.tags[j].created_t + "</td>\n" +
-  //                     "                        </tr>");
-  //           }
-  //         }
-  //       } else if (r.status === 403) {
-  //         const tokenResult = Refresh()
-  //         if (tokenResult) {
-  //           getTag();
-  //           console.log("true")
-  //         }
-  //       } else {
-  //         document.location.href = '/';
-  //       }
-  //     }
-  //   };
-  //   r.send();
-  // }
-
   function GetProject() {
     const r = new XMLHttpRequest();
     r.open('GET', 'http://localhost:5000/api/getProject', true);
@@ -360,7 +225,8 @@
                 send_percentage = (rObj.project_list[i].send_no / rObj.project_list[i].targets) * 100;
                 send_percentage = parseInt(send_percentage);
 
-                if (full_tag === '') {
+
+                if (full_tag === '') {// 태그가 없는경우 (존재해서는 안되는 case)
                   $('#project_list > tbody:last').append('<tr>' + '<td id=' + rObj.project_list[i].p_no
                           + '" style="visibility:hidden;position:absolute;">' + rObj.project_list[i].p_no + '</td>'
                           + '<td><div class="pgn-checkbox">'
@@ -368,12 +234,15 @@
                           + '</td><td>' + rObj.project_list[i].p_name + '</td><td>' + full_tag + '</td>'
                           + '<td>' + status + '</td><td>' + rObj.project_list[i].tmp_no + '</td>'
                           + '<td>' + rObj.project_list[i].targets + ' 명</td>' // 전체 대상자수
+                          + '<td><progress class="valign-middle" value="' + rObj.project_list[i].reading + '" max="'
+                          + rObj.project_list[i].targets + '"></progress>' + infection_percentage
+                          + "%(" + rObj.project_list[i].infection +"명)" + '</td>' // 메일 읽은 사람 수
                           + '<td><progress class="valign-middle" value="' + rObj.project_list[i].infection + '" max="'
                           + rObj.project_list[i].targets + '"></progress>' + infection_percentage
-                          + "%(" + rObj.project_list[i].infection +"명)" + '</td>'
+                          + "%(" + rObj.project_list[i].infection +"명)" + '</td>' // 메일 읽은 사람 수
                           + '<td><progress class="valign-middle" value="' + rObj.project_list[i].send_no + '" max="'
                           + rObj.project_list[i].targets + '"></progress>' + send_percentage
-                          + "%(" + rObj.project_list[i].send_no +"명)" + '</td>'
+                          + "%(" + rObj.project_list[i].send_no +"명)" + '</td>' // 전송현황
                           + '<td>' + rObj.project_list[i].start_date + '</td><td>' + rObj.project_list[i].end_date
                           + '</td></tr>');
                 } else {
@@ -384,19 +253,22 @@
                         + '</td><td>' + rObj.project_list[i].p_name + '</td><td>' + full_tag + '</td>'
                         + '<td>' + status + '</td><td><button onclick="OpenModal('+rObj.project_list[i].tml_no+')" class="btn btn-primary">' + rObj.project_list[i].tmp_no + '</buttom></td>'
                         + '<td>' + rObj.project_list[i].targets + ' 명</td>' // 전체 대상자수
+                        + '<td><progress class="valign-middle" value="' + rObj.project_list[i].reading + '" max="'
+                        + rObj.project_list[i].targets + '"></progress>' + infection_percentage
+                        + "%(" + rObj.project_list[i].infection +"명)" + '</td>' // 메일 읽은 사람 수
                         + '<td><progress class="valign-middle" value="' + rObj.project_list[i].infection + '" max="'
                         + rObj.project_list[i].targets + '"></progress>' + infection_percentage
-                        + "%(" + rObj.project_list[i].infection +"명)" + '</td>'
+                        + "%(" + rObj.project_list[i].infection +"명)" + '</td>' // 메일 읽은 사람 수
                         + '<td><progress class="valign-middle" value="' + rObj.project_list[i].send_no + '" max="'
                         + rObj.project_list[i].targets + '"></progress>' + send_percentage
-                        + "%(" + rObj.project_list[i].send_no +"명)" + '</td>'
+                        + "%(" + rObj.project_list[i].send_no +"명)" + '</td>' // 전송현황
                         + '<td>' + rObj.project_list[i].start_date + '</td><td>' + rObj.project_list[i].end_date
                         + '</td></tr>');
               }
             }
           } else if (rObj.project_list === null) {
             document.getElementById('under').style.background="#f2eff1";
-            $('#project_list').append('<tr style="background-color:white"><td colspan="11" align="center">' +
+            $('#project_list').append('<tr style="background-color:white"><td colspan="12" align="center">' +
                     '<div class="alert alert" style="background-color:white">' +
                     '<p align="center"><span style="border: 1px; font-size:15px;' +
                     'font-style: italic; font-weight: 100;">진행중인 프로젝트가 없습니다.</span></p>' +
