#91 | 프로젝트 생성 메뉴 병합, 종료일 수정 기능 추가, 프로젝트 관리에서 템플릿 뷰어역할

--- a/ui/html/project/project-making.html
+++ b/ui/html/project/project-making.html
@@ -100,7 +100,7 @@
     <div class="content-wrapper">
         <div class="col-md-5">
             <h5>프로젝트 정보 입력</h5>
-            <div class="form-group"><input type="email"
+            <div class="form-group"><input type="text"
                                                            id="p_name"><label>프로젝트 이름</label>
             </div>
             <div class="form-group"><textarea type="text"
@@ -222,7 +222,6 @@
         };
         r.send();
     }
-
 
     function SmtpSimpleTest() {
         const r = new XMLHttpRequest();
