--- a/ui/html/setting/smtp-setting.html
+++ b/ui/html/setting/smtp-setting.html
@@ -42,11 +42,11 @@
                 <div class="right-container"></div>
             </a>
             </li>
-            <li class="tree-item"><a href="/project/create"><i
-                    class="la la-pencil-square"></i><span>프로젝트 생성</span>
-                <div class="right-container"></div>
-            </a>
-            </li>
+<!--            <li class="tree-item"><a href="/project/create"><i-->
+<!--                    class="la la-pencil-square"></i><span>프로젝트 생성</span>-->
+<!--                <div class="right-container"></div>-->
+<!--            </a>-->
+<!--            </li>-->
             <li class="header">Setting</li>
             <li class="has-children active"><a href="javascript:;"><i class="la la-cog"></i><span>설정</span>
                 <div class="right-container"><i class="la la-chevron-right tree-icon"></i></div>
