#91 | 프로젝트 생성 메뉴 병합, 종료일 수정 기능 추가, 프로젝트 관리에서 템플릿 뷰어역할

--- a/ui/html/project/project.html
+++ b/ui/html/project/project.html
@@ -714,7 +714,7 @@
                     } else if (r.status === 400) {
                         rObj = JSON.parse(r.responseText);
                         if (rObj.dateCompare === true) {
-                            alert("종료일을 변경할 수 없는 설정입니다")
+                            alert("적용할 수 없는 종료일입니다")
                             location.reload();
                         }
                     }
