--- a/ui/html/project/project.html
+++ b/ui/html/project/project.html
@@ -113,8 +113,6 @@
                                         onclick="OpenProjectCreateModal()"><span>프로젝트 등록</span></button>
                                 <button class="btn btn-primary" id="del_project"><span>프로젝트 삭제</span></button>
                             </div>
-
-<<<<<<< HEAD
                         </div>
                     </div>
 
@@ -273,7 +271,8 @@
                                     <input type="text" id="p_name1">
                                 </div>
                                 <div class="form-group">
-                                    <textarea type="text" id="p_description1" placeholder="프로젝트 설명" cols="50"></textarea>
+                                    <textarea type="text" id="p_description1" placeholder="프로젝트 설명"
+                                              cols="50"></textarea>
                                 </div>
                                 <div class="form-group">
                                     <label for="start_date">프로젝트 시작일</label>
@@ -312,59 +311,61 @@
                             </div>
                         </div>
                     </div>
-=======
-          <div class="pgn-modal" id="project_regist">
-            <div class="pgn-modal-wrapper">
-              <div class="modal__header">
-                <h5>프로젝트 등록</h5>
-                <div class="toolbox">
-                  <button class="btn-modal-close" onclick="CloseProjectCreateModal()"><i class="la la-times"></i></button>
-                </div>
-              </div>
-              <div class="modal__body">
-                <div class="form-group">
-                    <label>프로젝트 이름</label>
-                    <input type="text" id="p_name">
-                </div>
-                <div class="form-group">
-                    <textarea type="text" id="p_description" placeholder="프로젝트 설명" cols="50"></textarea>
-                </div>
-                <div class="form-group">
-                  <label for="start_date">프로젝트 시작일</label>
-                  <input id="start_date" type="date" value="xxx" min="yyy" max="zzz">
-                </div>
-                <div class="form-group">
-                  <label for="end_date">프로젝트 종료일</label>
-                  <input id="end_date" type="date" value="xxx" min="yyy" max="zzz">
-                </div>
-                <div class="form-group">
-                  <label for="template">템플릿 선택</label>
-                    <select id="template"></select>
-                </div>
-                <div class="form-group w-50">
-                    <label for="tag_1">훈련 대상자 선택(태그) 1(최대 3)</label><select id="tag_1">
-                </select>
-                </div>
-                <div class="form-group w-50">
-                    <label for="tag_2">훈련 대상자 선택(태그) 2(최대 3)</label><select id="tag_2">
-                </select>
-                </div>
-                <div class="form-group w-50">
-                    <label for="tag_3">훈련 대상자 선택(태그) 3(최대 3)</label><select id="tag_3">
-                </select>
-                </div>
-              </div>
-              <div class="modal__footer">
-                  <button class="btn btn-secondary btn-lg btn-block w-50" onclick="SmtpSimpleTest()">SMTP 연결 테스트
-                  </button>
-                  <button class="btn btn-ghost" onclick="CloseProjectCreateModal()">취소</button>
-                <button class="btn btn-primary pull-right" id="project_reg" onclick="CreateProject()">등록</button>
 
-              </div>
-            </div>
-          </div>
+                    <div class="pgn-modal" id="project_regist">
+                        <div class="pgn-modal-wrapper">
+                            <div class="modal__header">
+                                <h5>프로젝트 등록</h5>
+                                <div class="toolbox">
+                                    <button class="btn-modal-close" onclick="CloseProjectCreateModal()"><i
+                                            class="la la-times"></i></button>
+                                </div>
+                            </div>
+                            <div class="modal__body">
+                                <div class="form-group">
+                                    <label>프로젝트 이름</label>
+                                    <input type="text" id="p_name">
+                                </div>
+                                <div class="form-group">
+                                    <textarea type="text" id="p_description" placeholder="프로젝트 설명" cols="50"></textarea>
+                                </div>
+                                <div class="form-group">
+                                    <label for="start_date">프로젝트 시작일</label>
+                                    <input id="start_date" type="date" value="xxx" min="yyy" max="zzz">
+                                </div>
+                                <div class="form-group">
+                                    <label for="end_date">프로젝트 종료일</label>
+                                    <input id="end_date" type="date" value="xxx" min="yyy" max="zzz">
+                                </div>
+                                <div class="form-group">
+                                    <label for="template">템플릿 선택</label>
+                                    <select id="template"></select>
+                                </div>
+                                <div class="form-group w-50">
+                                    <label for="tag_1">훈련 대상자 선택(태그) 1(최대 3)</label><select id="tag_1">
+                                </select>
+                                </div>
+                                <div class="form-group w-50">
+                                    <label for="tag_2">훈련 대상자 선택(태그) 2(최대 3)</label><select id="tag_2">
+                                </select>
+                                </div>
+                                <div class="form-group w-50">
+                                    <label for="tag_3">훈련 대상자 선택(태그) 3(최대 3)</label><select id="tag_3">
+                                </select>
+                                </div>
+                            </div>
+                            <div class="modal__footer">
+                                <button class="btn btn-secondary btn-lg btn-block w-50" onclick="SmtpSimpleTest()">SMTP
+                                    연결 테스트
+                                </button>
+                                <button class="btn btn-ghost" onclick="CloseProjectCreateModal()">취소</button>
+                                <button class="btn btn-primary pull-right" id="project_reg" onclick="CreateProject()">
+                                    등록
+                                </button>
 
->>>>>>> 1b474613b820a7bf1736f2dd20f03c157068f38a
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="toolbox">
                         <div class="box-body pt-0 px-0 responsive">
@@ -511,6 +512,7 @@
                             // 태그 분리작업
                             let full_tag = ''
                             let status = ''
+                            let reading_percentage;
                             let infection_percentage;
                             let send_percentage;
                             for (let j = 0; j < rObj.project_list[i].tag_no.length; j++) {
@@ -564,14 +566,17 @@
                                 status += '<button class="btn btn-primary">' + rObj.project_list[i].p_status + '</button>'
                             }
 
+                            // 소수점은 화면에 안보여주기 위해 int 형으로 형변환한다.
+                            // 열람비율
                             reading_percentage = (rObj.project_list[i].reading / rObj.project_list[i].targets) * 100;
                             reading_percentage = parseInt(reading_percentage);
 
+                            // 감염비율
                             infection_percentage = (rObj.project_list[i].infection / rObj.project_list[i].targets) * 100;
                             infection_percentage = parseInt(infection_percentage);
 
-                            // 소수점은 화면에 안보여주기 위해 int 형으로 형변환한다.
-                            send_percentage = (rObj.project_list[i].send_no / rObj.project_list[i].targets) * 100;
+                            // 전송비율
+                           send_percentage = (rObj.project_list[i].send_no / rObj.project_list[i].targets) * 100;
                             send_percentage = parseInt(send_percentage);
 
 
