--- a/ui/html/project/project.html
+++ b/ui/html/project/project.html
@@ -396,13 +396,10 @@
                             </table>
                         </div>
                     </div>
-
-
                     <div class="pagination-wrapper clearfix" id="under">
                         <ul class="pagination float--right" id="pages">
                         </ul>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -605,7 +602,7 @@
                             }
                         }
                     } else if (rObj.project_list === null) {
-                        document.getElementById('under').style.background = "#f2eff1";
+                        // document.getElementById('under').style.background = "#f2eff1";
                         $('#project_list').append('<tr style="background-color:white"><td colspan="12" align="center">' +
                             '<div class="alert alert" style="background-color:white">' +
                             '<p align="center"><span style="border: 1px; font-size:15px;' +
