#71 버그 수정작업 - 2

--- a/ui/html/project/project.html
+++ b/ui/html/project/project.html
@@ -687,6 +687,8 @@
                     }
                 } else if (r.status === 400) {
                     alert("프로젝트 생성에 필요한 정보들이 전부 입력되지 않았습니다.");
+                } else if (r.status === 500) {
+                    alert("선택한 태그 중에는 훈련대상자가 존재하지 않습니다.");
                 }
             }
         };
