#71 템플릿 중복 & 등록개수 제한 구현

--- a/ui/html/dashboard/main.html
+++ b/ui/html/dashboard/main.html
@@ -159,7 +159,7 @@
                             <div class="form-select pgn-select">
                                 <select name="selector">
                                     <option value="1" selected>원 그래프 차트보기</option>
-<!--                                    <option value="2">막대그래프 차트보기</option>-->
+                                    <option value="2">막대그래프 차트보기</option>
                                 </select>
                             </div>
                         </div>
